media/lidarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: lidarr
spec:
  replicas: 0
  template:
    spec:
      containers:
        - name: lidarr
          image: linuxserver/lidarr@sha256:e9f86b7fa0ecddca3ea92359ff02fa6d0dc535cdcabcddccf20e1af79d0eaea1
          ports:
            - name: http
              containerPort: 8686
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: lidarr-config
        - name: data
          persistentVolumeClaim:
            claimName: media-data
