media/lidarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lidarr
spec:
  selector:
    app: lidarr
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
